[package]
name = "partitioning"
version = "0.1.0"
description = "A library for working directly with partitions"
edition.workspace = true
rust-version.workspace = true

[dependencies]
disks = { path = "../disks" }
types = { path = "../types" }
thiserror.workspace = true
log.workspace = true
gpt.workspace = true
nix.workspace = true
uuid.workspace = true
linux-raw-sys = { workspace = true, features = ["loop_device", "ioctl"] }

[dev-dependencies]
test-log.workspace = true
