[package]
name = "provisioning"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
miette = { workspace = true, features = ["fancy"] }

[dependencies]
disks = { path = "../disks" }
partitioning = { path = "../partitioning" }
types = { path = "../types", features = ["kdl"] }
kdl = { workspace = true, features = ["span"] }
miette = { workspace = true }
itertools = { workspace = true }
phf = { workspace = true, features = ["macros"] }
test-log.workspace = true
log.workspace = true
