[package]
name = "superblock"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
uuid = { workspace = true, features = ["v8"] }
zerocopy = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
test-log.workspace = true
zstd.workspace = true
